[package]
name = "libastro-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust bindings to libastro from XEphem"
repository = "https://github.com/wildwestrom/libastro-sys"
categories = ["external-ffi-bindings", "mathematics", "science", "aerospace"]
keywords = ["astronomy", "XEphem"]

[build-dependencies]
bindgen = "0.65.1"
make-cmd = "0.1.0"
